fix: html structure

--- a/src/index.html
+++ b/src/index.html
@@ -59,28 +59,32 @@
     <!-- End::Page Styles -->
   </head>
   <body>
-    <nav class="section">
-      <div class="padding-global padding-section-medium">
-        <div class="container-small">
-          <!-- Navbar Here -->
+    <div class="page-wrapper">
+      <nav class="section">
+        <div class="padding-global padding-section-medium">
+          <div class="container-small">
+            <!-- Navbar Here -->
+          </div>
         </div>
-      </div>
-    </nav>
-    <section>
-      <div class="padding-global padding-section-medium">
-        <div class="container-small">
-          <!-- Content Here -->
-           <h1>Test</h1>
+      </nav>
+      <main class="main-wrapper">
+        <section>
+          <div class="padding-global padding-section-medium">
+            <div class="container-small">
+              <!-- Content Here -->
+               <h1>Test</h1>
+            </div>
+          </div>
+        </section>
+      </main>
+      <footer class="section">
+        <div class="padding-global padding-section-medium">
+          <div class="container-small">
+            <!-- Footer Here -->
+          </div>
         </div>
-      </div>
-    </section>
-    <footer class="section">
-      <div class="padding-global padding-section-medium">
-        <div class="container-small">
-          <!-- Footer Here -->
-        </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
 
     <!-- Start::Global Bundle Scripts (used by all pages) -->
     <script src="assets/js/scripts.bundle.js"></script>
